[metadata]
description-file = README.rst
[bdist_wheel]
universal = 1


[coverage:run]
omit = docs

[isort]
line_length=119
default_section=THIRDPARTY
known_first_party=service,common

[flake8]
; F841 local variable 'var' is assigned to but never used
ignore = F401,F403,F811,F841, W503
exclude = bin/,include/,lib/,.git/,*/migrations/*,build/,node_modules
max-line-length = 119
max-complexity = 10



[nosetests]
where = tests
verbose = 1
verbosity = 1
detailed-errors = 1
no-path-adjustment = 1
with-doctest = 1
with-coverage = 1
cover-erase = 1
cover-package = booleano
# Without this, the booleano.parser.testutils package would be ignored:
cover-tests = 1